; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libifconfig/extr_libifconfig_media.c_get_toptype_desc.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libifconfig/extr_libifconfig_media.c_get_toptype_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifmedia_description = type { i64, i32* }

@ifm_type_descriptions = common dso_local global %struct.ifmedia_description* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ifmedia_description* (i32)* @get_toptype_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ifmedia_description* @get_toptype_desc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ifmedia_description*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.ifmedia_description*, %struct.ifmedia_description** @ifm_type_descriptions, align 8
  store %struct.ifmedia_description* %4, %struct.ifmedia_description** %3, align 8
  br label %5

5:                                                ; preds = %19, %1
  %6 = load %struct.ifmedia_description*, %struct.ifmedia_description** %3, align 8
  %7 = getelementptr inbounds %struct.ifmedia_description, %struct.ifmedia_description* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %22

10:                                               ; preds = %5
  %11 = load i32, i32* %2, align 4
  %12 = call i64 @IFM_TYPE(i32 %11)
  %13 = load %struct.ifmedia_description*, %struct.ifmedia_description** %3, align 8
  %14 = getelementptr inbounds %struct.ifmedia_description, %struct.ifmedia_description* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp eq i64 %12, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %10
  br label %22

18:                                               ; preds = %10
  br label %19

19:                                               ; preds = %18
  %20 = load %struct.ifmedia_description*, %struct.ifmedia_description** %3, align 8
  %21 = getelementptr inbounds %struct.ifmedia_description, %struct.ifmedia_description* %20, i32 1
  store %struct.ifmedia_description* %21, %struct.ifmedia_description** %3, align 8
  br label %5

22:                                               ; preds = %17, %5
  %23 = load %struct.ifmedia_description*, %struct.ifmedia_description** %3, align 8
  ret %struct.ifmedia_description* %23
}

declare dso_local i64 @IFM_TYPE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
